# dataset_dynamics

./: .gitignore  README.md  pyproject.toml
notebooks/misc/: PNormIntegrals.ipynb  gaussian_curve_fit.ipynb  layer_spectrum.ipynb  mnist_width.ipynb  model_plots.ipynb
notebooks/pysindy/: mnist_ensemble.ipynb  mnist_ensemble.py
notebooks/pysindy/PDE_heriarchy_CIFAR10/: pysindy_cifar10_pde_avg.ipynb  pysindy_cifar10_pde_cubic.ipynb  pysindy_cifar10_pde_og.ipynb  pysindy_cifar10_pde_savgol.ipynb  pysindy_cifar10_pde_surface.ipynb
notebooks/pysindy/PDE_heriarchy_EuroSAT/: parse_pde.ipynb  pysindy_eurosat_pde_avg.ipynb  pysindy_eurosat_pde_cubic.ipynb  pysindy_eurosat_pde_og.ipynb  pysindy_eurosat_pde_savgol.ipynb  pysindy_eurosat_pde_surface.ipynb
notebooks/pysindy/PDE_heriarchy_FMNIST/: pysindy_fmnist_pde_avg.ipynb  pysindy_fmnist_pde_cubic.ipynb  pysindy_fmnist_pde_og.ipynb  pysindy_fmnist_pde_savgol.ipynb  pysindy_fmnist_pde_surface.ipynb
notebooks/pysindy/PDE_heriarchy_MNIST/: parse_pde.ipynb  pysindy_mnist_pde_avg.ipynb  pysindy_mnist_pde_cubic.ipynb  pysindy_mnist_pde_og.ipynb  pysindy_mnist_pde_savgol.ipynb  pysindy_mnist_pde_surface.ipynb  pysindy_mnist_pde_traveling.ipynb
notebooks/pysindy/PDE_heriarchy_PCAM/: pysindy_pcam_pde_avg.ipynb  pysindy_pcam_pde_cubic.ipynb  pysindy_pcam_pde_og.ipynb  pysindy_pcam_pde_savgol.ipynb  pysindy_pcam_pde_surface.ipynb
notebooks/pysindy/PDE_heriarchy_STL10/: pysindy_stl10_pde_avg.ipynb  (+5 more)
scripts/: AE_fft.py
src/: __init__.py  datasets.py  global_config.py  helpers.py  models.py  plot_data.py
(+36 files in other folders)
